--- a/http/build.gradle
+++ b/http/build.gradle
@@ -26,7 +26,39 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    compile 'com.google.code.gson:gson:2.6.2'
+//    compile 'com.google.code.gson:gson:2.6.2'
     compile 'com.squareup.okhttp3:okhttp:3.2.0'
 
+    compile 'org.didd.dev:common:1.0.1'
+
 }
+
+
+//gradlew install
+//gradlew bintrayUpload
+
+ext {
+    bintrayRepo = 'maven'
+    bintrayName = 'http'                                //项目名字
+
+    publishedGroupId = 'org.didd.dev'                //GroupId,这个要别人引用的时候会用到，
+    libraryName = 'http'                         //这个是项目名字
+    artifact = 'http'                                   //artifactId，这个也是别人引用的时候，会用到，它要和Module名字一样
+
+    libraryDescription = 'Dev Http Utils, need okhttp'       //项目描述
+
+    siteUrl = 'https://github.com/Jiangxuewu/JCenter'          //把项目分享到github后的项目地址
+    gitUrl = 'https://github.com/Jiangxuewu/JCenter.git'       //分享后的项目git地址
+
+    libraryVersion = '1.0.0'
+    developerId = 'org.didd.dev'                             //这个开发者id，自己写
+    developerName = 'skycar'                           //这个是开发者名字
+    developerEmail = 'dev@bb-sz.com'                    //开发者邮箱
+
+    licenseName = 'The Apache Software License, Version 2.0'     //开源协议
+    licenseUrl = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+    allLicenses = ["Apache-2.0"]
+}
+apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/installv1.gradle'
+apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/bintrayv1.gradle'
+
