1, update settings.gradle

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,8 @@
-include ':app', ':http', ':common'
+include ':app'
+include ':webview'
+include ':scheme'
+include ':http'
+include ':common'
 include ':fzhelper'
+include ':admob'
+include ':version'
