--- a/version/src/main/AndroidManifest.xml
+++ b/version/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
             android:name="org.didd.version.VersionActivity"
             android:configChanges="fontScale|layoutDirection|locale|mnc|mcc|orientation|keyboardHidden|screenSize|screenLayout|smallestScreenSize"
             android:screenOrientation="portrait"
+            android:launchMode="singleInstance"
             android:theme="@style/didd_modal_dialog" />
     </application>
 
