--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,8 @@ buildscript {
         classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.3.1'
         classpath "org.jfrog.buildinfo:build-info-extractor-gradle:3.1.1"
         classpath 'com.github.dcendents:android-maven-gradle-plugin:2.0'
+
+        classpath 'org.greenrobot:greendao-gradle-plugin:3.0.0'
     }
 }
 
@@ -20,9 +22,6 @@ allprojects {
     repositories {
         google()
         jcenter()
-        maven{
-            url "http://dl.bintray.com/jiangxuewu/maven"
-        }
     }
 }
 
