--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -150,9 +150,13 @@
             android:enabled="true"
             android:exported="true">
             <intent-filter>
-                <action android:name="android.intent.action.PACKAGE_INSTALL"/>
+                <action android:name="android.intent.action.PACKAGE_INSTALL" />
             </intent-filter>
         </receiver>
+
+        <activity android:name=".webview.WebActivity" />
+        <activity android:name=".scheme.SchemeActivity" />
+        <activity android:name=".version.VersionActivity"></activity>
     </application>
 
 </manifest>
