--- a/settings.gradle
+++ b/settings.gradle
@@ -3,6 +3,6 @@ include ':webview'
 include ':scheme'
 include ':http'
 include ':common'
-include ':fzhelper'
+include ':accessibilityutils'
 include ':admob'
 include ':version'
