--- a/accessibilityutils/build.gradle
+++ b/accessibilityutils/build.gradle
@@ -31,18 +31,18 @@ dependencies {
 //
 //ext {
 //    bintrayRepo = 'maven'
-//    bintrayName = 'fzhelper'                                //项目名字
+//    bintrayName = 'accessibilityutils'                                //项目名字
 //
 //    publishedGroupId = 'org.didd.dev'                //GroupId,这个要别人引用的时候会用到，
-//    libraryName = 'fzhelper'                         //这个是项目名字
-//    artifact = 'fzhelper'                                   //artifactId，这个也是别人引用的时候，会用到，它要和Module名字一样
+//    libraryName = 'accessibilityutils'                         //这个是项目名字
+//    artifact = 'accessibilityutils'                                   //artifactId，这个也是别人引用的时候，会用到，它要和Module名字一样
 //
 //    libraryDescription = 'Accessibility(FuZhu) Utils'       //项目描述
 //
 //    siteUrl = 'https://github.com/Jiangxuewu/JCenter'          //把项目分享到github后的项目地址
 //    gitUrl = 'https://github.com/Jiangxuewu/JCenter.git'       //分享后的项目git地址
 //
-//    libraryVersion = '1.0.3'
+//    libraryVersion = '1.0.1'
 //    developerId = 'org.didd.dev'                             //这个开发者id，自己写
 //    developerName = 'skycar'                           //这个是开发者名字
 //    developerEmail = 'dev@bb-sz.com'                    //开发者邮箱
